artur/monitoring/manifests/vmalert/add.yaml
---
# Source: vmalert/charts/victoria-metrics-alert/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
    app.kubernetes.io/name: victoria-metrics-alert
    app.kubernetes.io/instance: vmalert
    helm.sh/chart: victoria-metrics-alert-0.4.17
    app.kubernetes.io/managed-by: Helm
  name: vmalert
spec:
  ports:
    - name: http
      port: 8880
      targetPort: http
      protocol: TCP
  selector:
    app: server
    app.kubernetes.io/name: victoria-metrics-alert
    app.kubernetes.io/instance: vmalert
  type: "ClusterIP"
---
# Source: vmalert/charts/victoria-metrics-alert/templates/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
  labels:
    app: server
    app.kubernetes.io/name: victoria-metrics-alert
    app.kubernetes.io/instance: vmalert
    helm.sh/chart: victoria-metrics-alert-0.4.17
    app.kubernetes.io/managed-by: Helm

  name: vmalert
spec:
  ingressClassName: system-ingress
  rules:
    - host: vmalert.k.erushnikov.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalert
                port:
                  number: 8880
  tls:
    - hosts:
        - vmalert.k.erushnikov.ru
      secretName: vmalert-tls
